properly linked portrait to github repo position

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </p>
         </div>
         <div class="content-container">
-            <img src="images/Craig_Portrait_test.jfif" alt="Craig Hamilton Portrait" class="placeholder-image">
+            <img src="https://github.com/craigoryHam/craigoryHam.github.io/blob/faf4b750688a2076a0cf48e4752b4463c7dc6b83/Images/Craig_Portrait_test.jfif" alt="Craig Hamilton Portrait" class="placeholder-image">
             <div class="text-container">
                 <h2 class="white-text">
                     KNOWN FOR <span class="bold">EVOCATIVE SOUNDSCAPES</span> IN <span class="italic">VIDEO GAMES</span>
