--- a/index.html
+++ b/index.html
@@ -128,11 +128,65 @@
             margin-bottom: 0px;
         }
 
-        @media (max-width: 768px) {
+        @media only screen and (max-width: 1024px) {
+            .parent-container {
+                padding: 0;
+            }
+            .content-container {
+                flex-direction: column;
+                align-items: center;
+            }
             .text-container {
                 margin-left: 0;
+                margin-top: 40px;
+                max-width: 100%;
+            }
+            .navigation-container h1 {
+                margin-top: 20px;
+            }
+            }
+
+            @media only screen and (max-width: 768px) {
+            h1 {
+                font-size: 32px;
+                letter-spacing: 1px;
+            }
+            .placeholder-image {
+                margin-top: 40px;
+            }
+            .text-container {
+                margin-left: 0;
+                margin-top: 20px;
+                max-width: 100%;
+            }
+            .navigation-container h1 {
+                margin-top: 20px;
+                font-size: 24px;
+            }
+            .email {
+                font-size: 24px;
+                margin-top: 20px;
+            }
+            }
+
+            @media only screen and (max-width: 480px) {
+            h1 {
+                font-size: 24px;
+                letter-spacing: 0.5px;
+            }
+            .placeholder-image {
+                margin-top: 20px;
+            }
+            .navigation-container h1 {
+                margin-top: 20px;
+                font-size: 20px;
+            }
+            .email {
+                font-size: 20px;
+                margin-top: 20px;
             }
         }
+
     </style>
 </head>
 <header>
