changed website style

--- a/index.html
+++ b/index.html
@@ -159,8 +159,12 @@
                 }
 
                 .placeholder-image {
-                    margin-top: 20px;
+                    margin-top: 40px;
                     width: 75%;
+                    height: auto;
+                }
+
+                body {
                     height: auto;
                 }
                 }
