--- a/index.html
+++ b/index.html
@@ -147,39 +147,37 @@
             }
 
             @media only screen and (max-width: 768px) {
-                .parent-container {
-                    flex-direction: column;
-                    align-items: center;
-                }
+  .parent-container {
+    flex-direction: column;
+    align-items: center;
+  }
 
-                .text-container {
-                    margin-left: 0;
-                    margin-top: 20px;
-                    max-width: 100%;
-                }
+  .placeholder-image {
+    max-width: 75%;
+    margin-top: 50px;
+  }
 
-                .placeholder-image {
-                    margin-top: 40px;
-                    width: 75%;
-                    height: auto;
-                }
+  body {
+    padding-bottom: 80px;
+  }
+}
 
-                body {
-                    height: auto;
-                }
-                }
+@media only screen and (max-width: 480px) {
+  .parent-container {
+    flex-direction: column;
+    align-items: center;
+  }
 
-                @media only screen and (max-width: 480px) {
-                .placeholder-image {
-                    margin-top: 40px;
-                    width: 90%;
-                    height: auto;
-                }
+  .placeholder-image {
+    max-width: 90%;
+    margin-top: 40px;
+  }
 
-                body {
-                    height: auto;
-                }
-            }
+  body {
+    padding-bottom: 80px;
+  }
+}
+
 
 
     </style>
