--- a/index.html
+++ b/index.html
@@ -147,40 +147,64 @@
             }
 
             @media only screen and (max-width: 768px) {
-  .parent-container {
-    flex-direction: column;
-    align-items: center;
-  }
+                .parent-container {
+                    flex-direction: column;
+                    align-items: center;
+                    height: auto;
+                }
 
-  .placeholder-image {
-    max-width: 75%;
-    margin-top: 50px;
-  }
+                .text-container {
+                    margin-left: 0;
+                    margin-top: 20px;
+                    max-width: 100%;
+                }
 
-  body {
-    padding-bottom: 80px;
-  }
-}
+                .placeholder-image {
+                    margin-top: 20px;
+                    width: 75%;
+                    height: auto;
+                }
 
-@media only screen and (max-width: 480px) {
-  .parent-container {
-    flex-direction: column;
-    align-items: center;
-  }
+                body {
+                    background: linear-gradient(180deg, #2b2727, #151618);
+                    height: auto;
+                    margin: 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                }
 
-  .placeholder-image {
-    max-width: 90%;
-    margin-top: 40px;
-  }
+                footer {
+                    margin-top: 20px;
+                }
+                }
 
-  body {
-    padding-bottom: 80px;
-  }
-}
+                @media only screen and (max-width: 480px) {
+                .placeholder-image {
+                    margin-top: 40px;
+                    width: 90%;
+                    height: auto;
+                }
+
+                body {
+                    background: linear-gradient(180deg, #2b2727, #151618);
+                    height: auto;
+                    margin: 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                footer {
+                    margin-top: 20px;
+                }
+            }
 
 
 
-    </style>
+</style>
 </head>
 <header>
 </header>
