--- a/index.html
+++ b/index.html
@@ -146,11 +146,10 @@
             }
             }
 
-            @media only screen and (max-width: 768px) {
+            @media only screen and (max-width: 768px) and (orientation: portrait){
                 .parent-container {
                     flex-direction: column;
                     align-items: center;
-                    height: auto;
                 }
 
                 .text-container {
@@ -164,43 +163,53 @@
                     width: 75%;
                     height: auto;
                 }
-
-                body {
-                    background: linear-gradient(180deg, #2b2727, #151618);
-                    height: auto;
-                    margin: 0;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
                 }
 
-                footer {
+                @media only screen and (max-width: 768px) and (orientation: landscape) {
+                .parent-container {
+                    flex-direction: row;
+                    align-items: flex-start;
+                    justify-content: center;
+                }
+
+                .text-container {
+                    margin-left: 40px;
+                    margin-top: 0;
+                    max-width: calc(100% - 360px);
+                }
+
+                .placeholder-image {
                     margin-top: 20px;
+                    width: 300px;
+                    height: auto;
                 }
                 }
 
                 @media only screen and (max-width: 480px) {
                 .placeholder-image {
-                    margin-top: 40px;
+                    margin-top: 20px;
                     width: 90%;
                     height: auto;
                 }
 
                 body {
-                    background: linear-gradient(180deg, #2b2727, #151618);
                     height: auto;
-                    margin: 0;
+                }
+                }
+
+                body {
+                    background: linear-gradient(180deg, #2b2727, #151618);
+                    font-family: 'Abel', sans-serif;
+                    text-align: center;
+                    color: #e5a471;
+                    font-weight: 300;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
+                    height: 100vh;
+                    margin: 0;
                 }
-
-                footer {
-                    margin-top: 20px;
-                }
-            }
 
 
 
