adjust tablet portrait top margin -5px

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 max-width: 100%;
             }
             .navigation-container h1 {
-                margin-top: 20px;
+                
             }
             }
 
@@ -159,13 +159,13 @@
                 }
 
                 .placeholder-image {
-                    margin-top: 300px;
+                    margin-top: 60px;
                     width: 75%;
                     height: auto;
                 }
-            }
+                }
 
-            @media only screen and (max-width: 768px) and (orientation: landscape) {
+                @media only screen and (max-width: 768px) and (orientation: landscape) {
                 .parent-container {
                     flex-direction: row;
                     align-items: flex-start;
@@ -183,9 +183,9 @@
                     width: 300px;
                     height: auto;
                 }
-            }
+                }
 
-            @media only screen and (max-width: 480px) {
+                @media only screen and (max-width: 480px) {
                 .placeholder-image {
                     margin-top: 40px;
                     width: 90%;
@@ -202,12 +202,11 @@
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
-                    height: 100vh;
+                    height: auto;
                     margin: 0;
+                    padding-top: 60px;
                 }
             }
-
-
 
 </style>
 </head>
