--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             margin-top: 30px;
             margin-bottom: 0px;
         }
-
+        /* Tablet Portrait */
         @media only screen and (max-width: 1024px) {
             .parent-container {
                 padding: 0;
@@ -145,68 +145,68 @@
                 
             }
             }
-
-            @media only screen and (max-width: 768px) and (orientation: portrait){
-                .parent-container {
-                    flex-direction: column;
-                    align-items: center;
-                }
-
-                .text-container {
-                    margin-left: 0;
-                    margin-top: 20px;
-                    max-width: 100%;
-                }
-
-                .placeholder-image {
-                    margin-top: 60px;
-                    width: 75%;
-                    height: auto;
-                }
-                }
-
-                @media only screen and (max-width: 768px) and (orientation: landscape) {
-                .parent-container {
-                    flex-direction: row;
-                    align-items: flex-start;
-                    justify-content: center;
-                }
-
-                .text-container {
-                    margin-left: 40px;
-                    margin-top: 0;
-                    max-width: calc(100% - 360px);
-                }
-
-                .placeholder-image {
-                    margin-top: 80px;
-                    width: 300px;
-                    height: auto;
-                }
-                }
-
-                @media only screen and (max-width: 480px) {
-                .placeholder-image {
-                    margin-top: 40px;
-                    width: 90%;
-                    height: auto;
-                }              
-
-                body {
-                    background: linear-gradient(180deg, #2b2727, #151618);
-                    font-family: 'Abel', sans-serif;
-                    text-align: center;
-                    color: #e5a471;
-                    font-weight: 300;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                    height: auto;
-                    margin: 0;
-                    padding-top: 60px;
-                }
+        /* Tablet Landscape */
+        @media only screen and (max-width: 768px) and (orientation: portrait){
+            .parent-container {
+                flex-direction: column;
+                align-items: center;
             }
+
+            .text-container {
+                margin-left: 0;
+                margin-top: 20px;
+                max-width: 100%;
+            }
+
+            .placeholder-image {
+                margin-top: 60px;
+                width: 75%;
+                height: auto;
+            }
+            }
+        /* Tablet Portrait */
+        @media only screen and (max-width: 768px) and (orientation: landscape) {
+        .parent-container {
+            flex-direction: row;
+            align-items: flex-start;
+            justify-content: center;
+        }
+
+        .text-container {
+            margin-left: 40px;
+            margin-top: 0;
+            max-width: calc(100% - 360px);
+        }
+
+        .placeholder-image {
+            margin-top: 80px;
+            width: 300px;
+            height: auto;
+        }
+        }
+        /* Smartphone Portrait and Landscape */
+        @media only screen and (max-width: 480px) {
+        .placeholder-image {
+            margin-top: 30px;
+            width: 90%;
+            height: auto;
+        }              
+
+        body {
+            background: linear-gradient(180deg, #2b2727, #151618);
+            font-family: 'Abel', sans-serif;
+            text-align: center;
+            color: #e5a471;
+            font-weight: 300;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: auto;
+            margin: 0;
+            padding-top: 60px;
+        }
+    }
 
 </style>
 </head>
