--- a/index.html
+++ b/index.html
@@ -191,7 +191,11 @@
             width: 90%;
             height: auto;
         }              
-
+        p, h2 {
+            font-size: 30px;
+            margin: 0;
+            word-wrap: break-word;
+        }
         body {
             background: linear-gradient(180deg, #2b2727, #151618);
             font-family: 'Abel', sans-serif;
