--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             }
         }
         /* Tablet Landscape */
-        @media only screen and (max-width: 768px) (max-device-width:1024px) and (orientation: landscape) {
+        @media only screen and (max-width: 768px) and (max-device-width:1024px) and (orientation: landscape) {
         .parent-container {
             flex-direction: row;
             align-items: flex-start;
