adjust tablet portrait top margin -5px

--- a/index.html
+++ b/index.html
@@ -145,6 +145,21 @@
             width: 300px;
             height: auto;
         }
+        body {
+            background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
+            font-family: 'Abel', sans-serif;
+            text-align: center;
+            color: #272727;
+            font-weight: 300;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: auto;
+            margin: 0;
+            padding-top: 60px;
+        }
+
         }
         /* Smartphone Portrait and Landscape */
         @media only screen and (max-width: 480px) {
@@ -162,7 +177,7 @@
             background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
             font-family: 'Abel', sans-serif;
             text-align: center;
-            color: #e5a471;
+            color: #272727;
             font-weight: 300;
             display: flex;
             flex-direction: column;
