--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
                 width: 75%;
                 height: auto;
             }
+        body {
+            background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
+            font-family: 'Abel', sans-serif;
+            text-align: center;
+            color: #272727;
+            font-weight: 300;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: auto;
+            margin: 0;
+            padding-top: 60px;
+        }
         }
         /* Tablet Landscape */
         @media only screen and (max-width: 768px) and (max-device-width:1024px) and (orientation: landscape) {
