--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         body {            
             /*background: linear-gradient(180deg, #2b2927, #151618);*/
-            background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
+            background: linear-gradient(180deg, #ffffff, #ecb040, #ce3009,#ca095a);
             font-family: 'Abel', sans-serif;
             text-align: center;
             color: #272727;
