--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Abel|Lato|Montserrat&display=swap" rel="stylesheet">
-    <title>Craig Hamilton</title>
+    <title>Craig Hamilton - Composer, Synthesist, Artist</title>
     <style>
         .navigation-container h1 a:hover {
 			color: #f1f1f1;
