--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             margin-top: 0;
             max-width: calc(100% - 360px);
         }
-
+        /* seems to affect cellphone height */
         .placeholder-image {
-            margin-top: 200px;
+            margin-top: 0px;
             width: 300px;
             height: auto;
         }
