--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
         .text-container {
             margin-left: 40px;
             margin-top: 0;
-            max-width: calc(100% - 360px);
+            max-width: calc(100% -100px ); /*260px*/
         }
         /* seems to affect cellphone height */
         .placeholder-image {
-            margin-top: 0px;
+            margin-top: 0px; /*down from 200 which took up the entire screen*/
             width: 300px;
             height: auto;
         }
