--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         .text-container {
             margin-left: 40px;
             margin-top: 0;
-            max-width: calc(100% -100px ); /*260px*/
+            max-width: calc(100%); /*260px*/
         }
         /* seems to affect cellphone height */
         .placeholder-image {
