--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         /* seems to affect cellphone height */
         .placeholder-image {
             margin-top: 0px; /*down from 200 which took up the entire screen*/
-            width: 300px;
+            width: 400px; /*up from 300px*/
             height: auto;
         }
         body {
