--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
             justify-content: center;
             align-items: center;
             height: auto;
+            width: auto; /*added this*/
             margin: 0;
         }
 
