--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
             .text-container {
                 margin-left: 0;
-                margin-top: 20px;
+                margin-top: 0px;
                 max-width: 100%;
             }
 
@@ -153,7 +153,7 @@
             margin-top: 0;
             max-width: calc(100%); /*260px*/
         }
-        /* seems to affect cellphone height */
+        /* seems to affect cellphone landscape */
         .placeholder-image {
             margin-top: 0px; /*down from 200 which took up the entire screen*/
             width: 400px; /*up from 300px*/
