--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            
         }
+        
 
         h1, h2 {
             font-weight: bold;
@@ -116,7 +118,7 @@
 
             .text-container {
                 margin-left: 0;
-                margin-top: 0px;
+                margin-top: 0; /**/
                 max-width: 100%;
             }
 
@@ -158,6 +160,8 @@
             margin-top: 0px; /*down from 200 which took up the entire screen*/
             width: 400px; /*up from 300px*/
             height: auto;
+        }
+        .film_grain {            
         }
         body {
             background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
@@ -212,11 +216,11 @@
         <img src="Images/Craig_Portrait_test.jfif" alt="Craig Hamilton Portrait" class="placeholder-image">
         <div class="text-container">
             <p>
-                <span class="bold">CRAIG HAMILTON</span>, ALSO KNOWN AS <span class="bold">CRAIGORY HAM</span>, HAS BEEN CREATING MUSIC FOR 20 YEARS AND COMPOSING FOR VIDEO GAMES SINCE 2012, MOST NOTABLY THE <span class="bold">EVOCATIVE SOUNDSCAPES</span> OF <span class="bold"><a href="https://store.steampowered.com/app/333640/Caves_of_Qud/" class="bold">CAVES OF QUD</a></span>.
+                <span class="bold">CRAIG HAMILTON</span><span class="bold"></span> HAS BEEN CREATING MUSIC FOR 20 YEARS AND COMPOSING FOR VIDEO GAMES SINCE 2012, MOST NOTABLY THE <span class="bold">EVOCATIVE SOUNDSCAPES</span> OF <span class="bold"><a href="https://store.steampowered.com/app/333640/Caves_of_Qud/" class="bold">CAVES OF QUD</a></span>.
                 <div class="navigation-container">
-                    <h1><a href="https://www.soundcloud.com/craigoryham" class="passive">HEAR MUSIC</a><br>
+                    <h1><a href="https://www.soundcloud.com/craigoryham" class="passive">LISTEN</a><br>
                     <!--<a>READ BLOG (COMING SOON)</a><br> --> 
-                    <a href="mailto:hamilton.craig88@gmial.com" class="passive">CONTACT CRAIG</a><br>
+                    <a href="mailto:hamilton.craig88@gmial.com" class="passive">CONTACT</a>
                 </h1>
                 </div>
             </p>
