--- a/index.html
+++ b/index.html
@@ -161,7 +161,11 @@
             width: 400px; /*up from 300px*/
             height: auto;
         }
-        .film_grain {            
+
+        p, h2 {
+            font-size: 30px;
+            margin: 0;
+            word-wrap: break-word;
         }
         body {
             background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
