--- a/index.html
+++ b/index.html
@@ -194,7 +194,13 @@
         margin-top: 40px;
         width: 90%;
         height: auto;
-    }              
+    }
+    .placeholder-image + p {
+        font-size: 30px;
+        margin: 0;
+        word-wrap: break-word;
+    }
+              
     body {
         background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
         font-family: 'Abel', sans-serif;
