--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
             margin: 0;
             word-wrap: break-word;
         }
+        .paragraph-text {
+            font-size: 40px;
+            margin: 0;
+            word-wrap: break-word;
+        }
 
 
         /* Tablet Portrait */
@@ -128,17 +133,6 @@
         height: auto;
     }
     body {
-        background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
-        font-family: 'Abel', sans-serif;
-        text-align: center;
-        color: #272727;
-        font-weight: 300;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        margin: 0;
         padding-top: 60px;
     }
     p, h2 {
@@ -168,18 +162,7 @@
     }
 
     body {
-        background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
-        font-family: 'Abel', sans-serif;
-        text-align: center;
-        color: #272727;
-        font-weight: 300;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: auto;
         width: auto;
-        margin: 0;
     }
     p, h2 {
         font-size: 30px;
@@ -206,18 +189,7 @@
         word-wrap: break-word;
     }
               
-    body {
-        background: linear-gradient(180deg, #f0e3d6, #df950d, #ce3009,#ca095a);
-        font-family: 'Abel', sans-serif;
-        text-align: center;
-        color: #272727;
-        font-weight: 300;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: auto;
-        margin: 0;
+    body {        
         padding-top: 60px;
     }
 }
@@ -239,8 +211,10 @@
     <div class="parent-container">
         <img src="Images/Craig_Portrait_test.jfif" alt="Craig Hamilton Portrait" class="placeholder-image">
         <div class="text-container">
-            <p>
-                <span class="bold">CRAIG HAMILTON</span><span class="bold"></span> HAS BEEN CREATING MUSIC FOR 20 YEARS AND COMPOSING FOR VIDEO GAMES SINCE 2012, MOST NOTABLY THE <span class="bold">EVOCATIVE SOUNDSCAPES</span> OF <span class="bold"><a href="https://store.steampowered.com/app/333640/Caves_of_Qud/" class="bold">CAVES OF QUD</a></span>.
+            <p class = "paragraph-text">
+                <span class="bold">CRAIG HAMILTON</span><span class="bod"></span> HAS BEEN CREATING MUSIC FOR 20 YEARS AND COMPOSING FOR VIDEO GAMES SINCE 2012, MOST NOTABLY THE <span class="bold">EVOCATIVE SOUNDSCAPES</span> OF <span class="bold"><a href="https://store.steampowered.com/app/333640/Caves_of_Qud/" class="bold">CAVES OF QUD</a></span>.
+            </p>
+            
                 <div class="navigation-container">
                     <h1><a href="https://www.soundcloud.com/craigoryham" class="passive">LISTEN</a><br>
                     <!--<a>READ BLOG (COMING SOON)</a><br> --> 
