--- a/index.html
+++ b/index.html
@@ -150,10 +150,13 @@
     }
 
     .text-container {
-        margin-left: 0px;
-        margin-top: 0;
-        max-width: calc(100%);
-    }
+  text-align: left;
+  margin-left: 200px;
+  flex: 1;
+  max-width: calc(100% - 390px);
+  height: 100%;
+  overflow: auto;
+}
 
     .placeholder-image {
         margin-top: 0px;
@@ -188,6 +191,10 @@
         margin: 0;
         word-wrap: break-word;
     }
+    .text-container {
+    margin-left: 0;
+    max-width: 100%;
+  }
               
     body {        
         padding-top: 60px;
