--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         .bold {
             font-weight: bold;
             color: #f1f1f1;
+            word-wrap: break-word;
         }
 
         .italic {
