--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
     margin-left: 0;
     max-width: 100%;
   }
+    .bold{
+        word-spacing: 2px;
+    }
               
     body {        
         padding-top: 60px;
