--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     max-width: 100%;
   }
     .bold{
-        word-spacing: 2px;
+        margin: 0 5px;
     }
               
     body {        
