--- a/blog.html
+++ b/blog.html
@@ -18,11 +18,12 @@
 			color: #f1f1f1;
             font-size:30px
 		}
-        body {
-            background: linear-gradient(180deg, #2b2727, #151618);
+        body {            
+            /*background: linear-gradient(180deg, #2b2927, #151618);*/
+            background: linear-gradient(180deg, #ffffff, #ecb040, #ce3009,#ca095a);
             font-family: 'Abel', sans-serif;
             text-align: center;
-            color: #e5a471;
+            color: #272727;
             font-weight: 300;
             display: flex;
             flex-direction: column;
@@ -30,6 +31,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            
         }
 
         h1, h2 {
