new css command fixed the background

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
         body {            
             /*background: linear-gradient(180deg, #2b2927, #151618);*/
-            background-attachment: scroll;
             background: linear-gradient(180deg, #ffffff, #ecb040, #ce3009,#ca095a);
+            background-attachment: fixed;
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
             font-family: 'Abel', sans-serif;
             text-align: center;
             color: #272727;
