new css command fixed the background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Craig Hamilton - Composer, Synthesist, Artist</title>
     <style>
         .navigation-container h1 a:hover {
-			color: #f1f1f1;
+			color: #e6d1ab;
             font-size: 28px;
 		}
 
@@ -20,9 +20,14 @@
             font-size: 28px;
 		}
 
+        #body:hover {
+        background-color: yellow;
+        }
+
+
         body {            
             /*background: linear-gradient(180deg, #2b2927, #151618);*/
-            background: linear-gradient(180deg, #ffffff, #ecb040, #ce3009,#ca095a);
+            background: linear-gradient(150deg, #ffffff, #ecb040, #ce3009,#ca095a);
             background-attachment: fixed;
             background-size: 100% 100%;
             background-repeat: no-repeat;
@@ -226,7 +231,7 @@
         <img src="Images/Craig_Portrait_test.jfif" alt="Craig Hamilton Portrait" class="placeholder-image">
         <div class="text-container">
             <p class = "paragraph-text">
-                <span class="bold">CRAIG HAMILTON</span><span class="bod"></span> HAS BEEN CREATING MUSIC FOR 20 YEARS AND COMPOSING FOR VIDEO GAMES SINCE 2012, MOST NOTABLY THE <span class="bold">EVOCATIVE SOUNDSCAPES</span> OF <span class="bold"><a href="https://store.steampowered.com/app/333640/Caves_of_Qud/" class="bold">CAVES OF QUD</a></span>.
+                <span class="bold">CRAIG HAMILTON</span><span class="bod"></span> HAS BEEN CREATING MUSIC FOR 20 YEARS AND COMPOSING FOR VIDEO GAMES SINCE 2012, MOST NOTABLY THE <span class="bold">EVOCATIVE SOUNDSCAPES</span> OF <span class="bold"><a href="https://store.steampowered.com/app/333640/Caves_of_Qud/" class="bold">CAVES OF QUD</a></span>
             </p>
             
                 <div class="navigation-container">
