--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="navigation-container">
                     <h1><a href="https://www.soundcloud.com/craigoryham" class="passive">LISTEN</a><br>
                     <!--<a>READ BLOG (COMING SOON)</a><br> --> 
-                    <a href="mailto:hamilton.craig88@gmial.com" class="passive">CONTACT</a>
+                    <a href="mailto:hamilton.craig88@gmail.com" class="passive">CONTACT</a>
                 </h1>
                 </div>
             </p>
