--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <div class="navigation-container">
+        <h1><a href="https://www.soundcloud.com/craigoryham" class="passive">ABOUT</a>
+            <a href="https://www.soundcloud.com/craigoryham" class="passive">LISTEN</a>
+            <a href="mailto:hamilton.craig88@gmail.com" class="passive">CONTACT</a>
+            <a href="mailto:hamilton.craig88@gmail.com" class="passive">BLOG</a>
+        
+
+    </h1>
+    </div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Abel|Lato|Montserrat&display=swap" rel="stylesheet">
@@ -231,15 +240,8 @@
         <img src="Images/Craig_Portrait_test.jfif" alt="Craig Hamilton Portrait" class="placeholder-image">
         <div class="text-container">
             <p class = "paragraph-text">
-                <span class="bold">CRAIG HAMILTON</span><span class="bod"></span> HAS BEEN CREATING MUSIC FOR 20 YEARS AND COMPOSING FOR VIDEO GAMES SINCE 2012, MOST NOTABLY THE <span class="bold">EVOCATIVE SOUNDSCAPES</span> OF <span class="bold"><a href="https://store.steampowered.com/app/333640/Caves_of_Qud/" class="bold">CAVES OF QUD</a></span>
+                CRAIG HAMILTON HAS BEEN CREATING MUSIC FOR 20 YEARS AND COMPOSING FOR VIDEO GAMES SINCE 2012, MOST NOTABLY THE EVOCATIVE SOUNDSCAPES</span> OF <span class="bold"><a href="https://store.steampowered.com/app/333640/Caves_of_Qud/" class="bold">CAVES OF QUD</a>.</span>
             </p>
-            
-                <div class="navigation-container">
-                    <h1><a href="https://www.soundcloud.com/craigoryham" class="passive">LISTEN</a><br>
-                    <!--<a>READ BLOG (COMING SOON)</a><br> --> 
-                    <a href="mailto:hamilton.craig88@gmail.com" class="passive">CONTACT</a>
-                </h1>
-                </div>
             </p>
         </div>
 
