--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <div class="navigation-container">
-    <h1><a href="craigoryhamilton.com/index.html" class="passive">ABOUT</a>
-        <a href="craigoryhamilton.com/blog.html" class="passive">BLOG</a>
+    <h1><a href="file:///C:/Users/b1m03/Documents/WebDev/craigoryHam.github.io/index.html" class="passive">ABOUT</a>
+        <a href="file:///C:/Users/b1m03/Documents/WebDev/craigoryHam.github.io/blog.html" class="passive">BLOG</a>
         <a href="mailto:hamilton.craig88@gmail.com" class="passive">CONTACT</a>
         <a href="https://www.soundcloud.com/craigoryham" class="passive">LISTEN</a>
     </h1>
