--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <div class="navigation-container">
-        <h1><a href="https://www.soundcloud.com/craigoryham" class="passive">ABOUT</a>
+        <h1><a href="/index" class="passive">ABOUT</a>
             <a href="https://www.soundcloud.com/craigoryham" class="passive">LISTEN</a>
             <a href="mailto:hamilton.craig88@gmail.com" class="passive">CONTACT</a>
-            <a href="mailto:hamilton.craig88@gmail.com" class="passive">BLOG</a>
         
 
     </h1>
