Added new books

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{
 	    |
             <a href="mailto:hamilton.craig88@gmail.com" class="passive">Contact</a>
 	    |
-	    <a href="/books.html" class="passive">Books I'm Reading</a>   
+	    <a href="/books.html" class="passive"><span>Books I'm Reading</span></a>   
     </h1>
     </div>
     <meta charset="UTF-8">
